feat:create signup page & add link to and from login page

--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,5 +1,8 @@
 //colors
 $background-cream: #fdf8ec;
+$pt-blue: #4579c2;
+$pt-lilac: #5c5696;
+$border: #d1d1d4;
 
 // breakpoint
 $tablet-breakpoint: 48rem;
