--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -26,6 +26,7 @@
     margin-top: 0.75rem;
     align-self: center;
     font-size: 12px;
+    color: #040328;
   }
 
   &__bottom {
@@ -82,7 +83,7 @@
     &:focus,
     &:hover {
       outline: none;
-      border-bottom-color: #4579c2;
+      border-bottom-color: $pt-blue;
     }
   }
 
@@ -95,7 +96,7 @@
     display: flex;
     align-self: center;
     width: 19rem;
-    box-shadow: 0px 1px 1px #5c5696;
+    box-shadow: 0px 1px 1px $pt-lilac;
     transition: 0.2s;
     align-items: center;
     margin-top: 0.25rem;
@@ -104,7 +105,7 @@
     &:focus,
     &:hover {
       border-width: 2px;
-      border-color: #4579c2;
+      border-color: $pt-blue;
       outline: none;
     }
   }
