--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -121,4 +121,28 @@
   &__arrow {
     margin-left: auto;
   }
+
+  &__message {
+    font-size: 12px;
+    color: red;
+    font-weight: 500;
+
+    letter-spacing: 0.5px;
+    text-align: center;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-top: 0.5rem;
+  }
+
+  &__success {
+    font-size: 12px;
+    color: forestgreen;
+    font-weight: 500;
+
+    letter-spacing: 0.5px;
+    text-align: center;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    padding-top: 0.5rem;
+  }
 }
