--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,10 @@
 @use "../../styles/partials/variables" as *;
 .header {
   padding: 0.85rem 1rem 0.5rem 0.9rem;
-  border-bottom: 2px solid #d1d1d4;
+  border-bottom: 2px solid $border;
+  background-color: #f5f8fd;
+  position: fixed;
+  width: 100%;
 
   &__wrapper {
     width: 100%;
