--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,9 +5,7 @@
 .header {
   padding: 0.85rem 1rem 0.5rem 0.9rem;
   border-bottom: 2px solid $border;
-  background-color: #f5f8fd;
-  position: fixed;
-  width: 100%;
+  background-color: rgba(250, 250, 255, 0.75);
 
   &__wrapper {
     width: 100%;
