--- a/src/components/Pocket/Pocket.scss
+++ b/src/components/Pocket/Pocket.scss
@@ -4,6 +4,10 @@
 @use "../../styles/partials/variables" as *;
 
 .pocket {
+  &__link {
+    text-decoration: none;
+    color: black;
+  }
   &__card {
     border-radius: 0.2rem;
     background-color: rgba(250, 250, 255, 0.75);
