--- a/src/components/PocketCard/Pocket.scss
+++ b/src/components/PocketCard/Pocket.scss
@@ -9,39 +9,37 @@
     color: black;
   }
   &__card {
-    border-radius: 0.4rem;
-    background-color: rgba(250, 250, 255, 0.75);
-    box-shadow: rgba(69, 121, 194, 0.5) 1px 1px 3px 0px inset,
-      rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset,
-      0px 2px 2px rgba(69, 121, 194, 0.5);
-    width: 20rem;
-    margin: 0 auto;
-    margin-top: 0.5rem;
-    margin-bottom: 1.25rem;
-    display: flex;
-    padding: 1rem;
+    background-color: rgb(255, 243, 213);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 1px;
+    width: 100%;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    margin-bottom: 0.1rem;
+    height: 90px;
   }
+
+  &__wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-left: 2px solid $pt-blue;
+    padding-left: 0.5rem;
+    height: 70px;
+  }
+
   &__image {
-    width: 4rem;
-    object-fit: contain;
+    width: 65px;
   }
   &__text {
-    width: 100%;
     margin-left: 1rem;
   }
   &__name {
     font-size: 1rem;
-    font-weight: 600;
-    width: 5rem;
-    padding-bottom: 0.25rem;
-    text-decoration: underline;
-  }
-  &__label {
-    font-size: 13px;
     font-weight: 500;
-    font-style: italic;
+    padding-bottom: 0.25rem;
+    flex-grow: 1;
   }
+
   &__notes {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
