--- a/src/pages/SignupPage/SignupPage.scss
+++ b/src/pages/SignupPage/SignupPage.scss
@@ -19,6 +19,7 @@
   &__title {
     font-size: 2rem;
     text-align: center;
+    font-family: "Chakra Petch";
   }
 
   &__description {
@@ -26,6 +27,7 @@
     font-weight: 400;
     margin-top: 7rem;
     text-align: center;
+    font-family: "Chakra Petch";
   }
 
   &__form {
@@ -93,6 +95,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     padding-left: 0.25rem;
+    font-family: "Chakra Petch";
   }
 
   &__arrow {
@@ -104,12 +107,14 @@
     font-size: 12px;
     display: flex;
     align-self: center;
+    font-family: "Chakra Petch";
   }
 
   &__link {
     padding-left: 3px;
     color: #43628a;
     font-weight: 400;
+    font-family: "Chakra Petch";
   }
 
   &__message {
@@ -118,6 +123,7 @@
     padding-left: 0.5rem;
     transform: translateY(-0.25rem);
     letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
   }
   &__success {
     font-size: 12px;
@@ -125,5 +131,6 @@
     padding-left: 0.5rem;
     transform: translateY(-0.25rem);
     letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
   }
 }
