--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -27,6 +27,7 @@
     align-self: center;
     font-size: 12px;
     color: #040328;
+    font-family: "Chakra Petch";
   }
 
   &__bottom {
@@ -40,12 +41,14 @@
     font-size: 12px;
     display: flex;
     align-self: center;
+    font-family: "Chakra Petch";
   }
 
   &__link {
     padding-left: 3px;
     color: #43628a;
     font-weight: 400;
+    font-family: "Chakra Petch";
   }
 }
 
@@ -116,6 +119,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     padding-left: 0.25rem;
+    font-family: "Chakra Petch";
   }
 
   &__arrow {
@@ -132,6 +136,7 @@
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 0.5rem;
+    font-family: "Chakra Petch";
   }
 
   &__success {
@@ -144,5 +149,6 @@
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 0.5rem;
+    font-family: "Chakra Petch";
   }
 }
