--- a/src/pages/ExpensesPage/ExpensesPage.scss
+++ b/src/pages/ExpensesPage/ExpensesPage.scss
@@ -12,10 +12,11 @@
     border-radius: 5px;
     background-color: white;
     margin-bottom: 5rem;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   }
   &__title {
     font-family: "Chakra Petch";
-
     font-size: 1.5rem;
     padding: 1rem;
   }
