--- a/src/components/ExpenseCard/ExpenseCard.scss
+++ b/src/components/ExpenseCard/ExpenseCard.scss
@@ -59,6 +59,19 @@
   }
 
   &__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  &__actions {
+    display: flex;
+    gap: 0.5rem;
+    align-items: end;
+  }
+  &__icon {
+    width: 1.25rem;
+  }
+  &__bottom-right {
     text-align: end;
   }
 
