--- a/src/pages/AddExpensePage/AddExpensePage.scss
+++ b/src/pages/AddExpensePage/AddExpensePage.scss
@@ -121,4 +121,24 @@
     margin-left: auto;
     width: 1.25rem;
   }
+  &__error {
+    text-align: end;
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: red;
+    padding-top: 0.5rem;
+    padding-left: 0.5rem;
+    transform: translateY(-0.25rem);
+    letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
+  }
+  &__success {
+    font-size: 1rem;
+    font-weight: 500;
+    color: forestgreen;
+    padding-left: 0.5rem;
+    transform: translateY(-0.25rem);
+    letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
+  }
 }
