--- a/src/pages/ExpensesPage/ExpensesPage.scss
+++ b/src/pages/ExpensesPage/ExpensesPage.scss
@@ -20,4 +20,24 @@
     font-size: 1.5rem;
     padding: 1rem;
   }
+
+  &__bottom {
+    border-top: 1px dotted $border;
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
+  }
+
+  &__total {
+    font-family: "Chakra Petch";
+    font-size: 1rem;
+    align-self: center;
+  }
+
+  &__amount {
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: #83a1cd;
+  }
 }
