feat:create profiles list with backend data and style

--- a/src/components/ExpenseCard/ExpenseCard.scss
+++ b/src/components/ExpenseCard/ExpenseCard.scss
@@ -40,7 +40,7 @@
   }
 
   &__down-icon {
-    transition: transform 0.25s ease; // Add transition for the transform property
+    transition: transform 0.25s ease;
   }
 
   &__down-icon.rotated {
