--- a/src/pages/ProfilesPage/ProfilesPage.scss
+++ b/src/pages/ProfilesPage/ProfilesPage.scss
@@ -11,9 +11,14 @@
     border: 1px solid $border;
     border-radius: 5px;
     background-color: white;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
+
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
       rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+    &--bottom {
+      margin-bottom: 5rem;
+    }
   }
   &__title {
     font-family: "Chakra Petch";
