feat:add functions to work out total owed and debt

--- a/src/components/ActiveProfile/ActiveProfile.scss
+++ b/src/components/ActiveProfile/ActiveProfile.scss
@@ -61,5 +61,11 @@
 
   &__label {
     font-size: 1rem;
+    text-align: center;
+    margin: 0.25rem 0rem 0.5rem 0rem;
+  }
+
+  &__box {
+    display: flex;
   }
 }
