feat; add create pockets

--- a/src/components/AddPocketCard/AddPocketCard.scss
+++ b/src/components/AddPocketCard/AddPocketCard.scss
@@ -2,3 +2,72 @@
 @use "../../styles/partials/typography.scss";
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
+
+.add-pocket {
+  &__form {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding: 1rem;
+    border: 1px solid $border;
+    border-radius: 5px;
+    background-color: white;
+    margin-bottom: 5rem;
+    border: 2px solid rgba(69, 121, 194);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+
+  &__group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  &__input {
+    border: none;
+    border-radius: 1rem;
+    border: 2px solid #d1d1d4;
+    background: none;
+    padding: 8px;
+    transition: 0.2s;
+    align-self: center;
+    margin-bottom: 0.75rem;
+    width: 90%;
+
+    &:active,
+    &:focus,
+    &:hover {
+      outline: none;
+      border-bottom-color: $pt-blue;
+    }
+  }
+
+  &__button {
+    background: $pt-blue;
+    color: white;
+    font-size: 14px;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    border: 1px solid #d4d3e8;
+    display: flex;
+    width: 8rem;
+    box-shadow: 0px 1px 1px $pt-lilac;
+    transition: 0.2s;
+    align-items: center;
+    margin: 0.25rem auto;
+    margin-right: 0;
+  }
+
+  &__button-text {
+    font-size: 13px;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 1px;
+    padding-left: 0.45rem;
+  }
+
+  &__arrow {
+    margin-left: auto;
+    width: 1.25rem;
+  }
+}
