--- a/src/pages/SignupPage/SignupPage.scss
+++ b/src/pages/SignupPage/SignupPage.scss
@@ -118,7 +118,7 @@
     font-family: "Chakra Petch";
   }
 
-  &__message {
+  &__error {
     font-size: 12px;
     color: red;
     padding-left: 0.5rem;
