--- a/src/components/AddPocketCard/AddPocketCard.scss
+++ b/src/components/AddPocketCard/AddPocketCard.scss
@@ -5,8 +5,8 @@
 
 .add-pocket {
   &__form {
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     padding: 1rem;
     border: 1px solid $border;
     border-radius: 5px;
@@ -32,7 +32,7 @@
     transition: 0.2s;
     align-self: center;
     margin-bottom: 0.75rem;
-    width: 90%;
+    width: 100%;
 
     &:active,
     &:focus,
@@ -69,5 +69,28 @@
   &__arrow {
     margin-left: auto;
     width: 1.25rem;
+  }
+
+  &__error {
+    text-align: end;
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: red;
+    padding-top: 0.5rem;
+    padding-left: 0.5rem;
+    transform: translateY(-0.25rem);
+    letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
+    margin-top: 0.5rem;
+  }
+  &__success {
+    text-align: end;
+    margin-top: 0.5rem;
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: forestgreen;
+    padding-left: 0.5rem;
+    letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
   }
 }
