--- a/src/pages/ProfilesPage/ProfilesPage.scss
+++ b/src/pages/ProfilesPage/ProfilesPage.scss
@@ -27,4 +27,123 @@
     padding-bottom: 0.5rem;
     border-bottom: 1px dashed $border;
   }
+
+  &__add {
+    margin: 1rem;
+  }
+
+  &__button {
+    background: $pt-blue;
+    color: white;
+    font-family: "Chakra Petch";
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0.5rem 1rem 0.5rem 0.75rem;
+    border-radius: 1rem;
+    border: 1px solid #d4d3e8;
+    display: flex;
+    width: 4.5rem;
+    box-shadow: 0px 1px 1px $pt-lilac;
+    transition: 0.2s;
+    align-items: center;
+    margin: 0 auto;
+    margin-right: 0;
+    justify-content: flex-end;
+    &--active {
+      border: 2px solid rgba(69, 121, 194);
+      background: white;
+      border-bottom: none;
+      color: black;
+    }
+  }
+
+  &__invite {
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color: white;
+    margin-bottom: 5rem;
+    border: 2px solid rgba(69, 121, 194);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+
+  &__group {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 100%;
+  }
+
+  &__input {
+    border: none;
+    border-radius: 1rem;
+    border: 2px solid #d1d1d4;
+    background: none;
+    padding: 8px;
+    transition: 0.2s;
+    align-self: center;
+    width: 100%;
+
+    &:active,
+    &:focus,
+    &:hover {
+      outline: none;
+      border-bottom-color: $pt-blue;
+    }
+  }
+
+  &__send {
+    background: $pt-blue;
+    color: white;
+    font-family: "Chakra Petch";
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0.5rem 1rem 0.5rem 0.75rem;
+    border-radius: 1rem;
+    border: 1px solid #d4d3e8;
+    display: flex;
+    width: 5rem;
+    box-shadow: 0px 1px 1px $pt-lilac;
+    transition: 0.2s;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0 auto;
+  }
+
+  &__button-text {
+    font-size: 13px;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 1px;
+    padding-left: 0.5rem;
+  }
+
+  &__arrow {
+    margin-left: auto;
+    width: 1.25rem;
+  }
+
+  &__error {
+    text-align: center;
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: red;
+    padding-top: 0.5rem;
+    padding-left: 0.5rem;
+    transform: translateY(-0.25rem);
+    letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
+    margin-top: 0.5rem;
+  }
+  &__success {
+    text-align: center;
+    margin-top: 0.5rem;
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: forestgreen;
+    padding-left: 0.5rem;
+    letter-spacing: 0.5px;
+    font-family: "Chakra Petch";
+  }
 }
