--- a/src/pages/PocketsPage/PocketsPage.scss
+++ b/src/pages/PocketsPage/PocketsPage.scss
@@ -35,11 +35,13 @@
     border-bottom: 2px solid $border;
     outline: 0;
     border-radius: 0.5rem;
-    border: 2px solid rgba(69, 121, 194);
+    border: 1px solid #d4d3e8;
+    box-shadow: 0px 1px 1px #5c5696;
     font-family: "Chakra Petch";
     font-weight: 500;
 
     &--active {
+      border: 2px solid rgba(69, 121, 194);
       background: white;
       border-bottom: none;
       color: black;
