--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -10,16 +10,20 @@
     display: flex;
     flex-direction: column;
     height: 25rem;
-    padding-top: 16.5rem;
+    padding-top: 11rem;
   }
 
   &__image {
     align-self: center;
   }
 
+  &__icon {
+    width: 7rem;
+  }
+
   &__logo {
     align-self: center;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     width: 13rem;
   }
   &__slogan {
