--- a/src/components/PocketCard/Pocket.scss
+++ b/src/components/PocketCard/Pocket.scss
@@ -15,7 +15,7 @@
     width: 100%;
     padding: 0.5rem 1rem 0.5rem 1rem;
     margin-bottom: 0.2rem;
-    height: 90px;
+    height: 5.625rem;
   }
 
   &__wrapper {
@@ -24,7 +24,7 @@
     align-items: center;
     border-left: 2px solid $pt-blue;
     padding-left: 0.5rem;
-    height: 70px;
+    height: 4.375rem;
   }
 
   &__link {
@@ -35,7 +35,7 @@
   }
 
   &__image {
-    width: 65px;
+    width: 4.0625rem;
   }
   &__text {
     margin-left: 1rem;
@@ -48,7 +48,7 @@
   }
 
   &__notes {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   &__icon {
