--- a/src/components/ProfileCard/ProfileCard.scss
+++ b/src/components/ProfileCard/ProfileCard.scss
@@ -22,7 +22,7 @@
     color: #83a1cd;
   }
   &__totals {
-    font-size: 14px;
+    font-size: 0.875rem;
     text-align: end;
   }
 
@@ -49,7 +49,7 @@
 
   &__tab {
     width: 33%;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 0.25rem 1rem;
     cursor: pointer;
     opacity: 0.6;
