--- a/src/pages/PocketsPage/PocketsPage.scss
+++ b/src/pages/PocketsPage/PocketsPage.scss
@@ -27,7 +27,7 @@
     padding-right: 1rem;
   }
   &__button {
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 0.5rem 1rem;
     background: $pt-blue;
     color: white;
