--- a/src/components/ActiveProfile/ActiveProfile.scss
+++ b/src/components/ActiveProfile/ActiveProfile.scss
@@ -16,7 +16,7 @@
     text-align: center;
   }
   &__totals {
-    font-size: 14px;
+    font-size: 0.875rem;
     text-align: end;
   }
 
@@ -31,7 +31,7 @@
 
   &__tab {
     width: 33%;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 0.25rem 1rem;
     cursor: pointer;
     opacity: 0.6;
