--- a/src/components/AddPocketCard/AddPocketCard.scss
+++ b/src/components/AddPocketCard/AddPocketCard.scss
@@ -9,7 +9,7 @@
     margin-right: 1rem;
     padding: 1rem;
     border: 1px solid $border;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     background-color: white;
     margin-bottom: 5rem;
     border: 2px solid rgba(69, 121, 194);
@@ -28,7 +28,7 @@
     border-radius: 1rem;
     border: 2px solid #d1d1d4;
     background: none;
-    padding: 8px;
+    padding: 0.5rem;
     transition: 0.2s;
     align-self: center;
     margin-bottom: 0.75rem;
@@ -45,7 +45,7 @@
   &__button {
     background: $pt-blue;
     color: white;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 0.5rem;
     border-radius: 1rem;
     border: 1px solid #d4d3e8;
@@ -59,7 +59,7 @@
   }
 
   &__button-text {
-    font-size: 13px;
+    font-size: 0.8125rem;
     color: white;
     font-weight: 500;
     letter-spacing: 1px;
