--- a/src/components/DeleteExpense/DeleteExpense.scss
+++ b/src/components/DeleteExpense/DeleteExpense.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
 
   &__title {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
     text-align: center;
     text-decoration: $pt-blue underline wavy;
