--- a/src/components/DeletePocket/DeletePocket.scss
+++ b/src/components/DeletePocket/DeletePocket.scss
@@ -10,8 +10,8 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  top: -205px;
-  left: -15px;
+  top: -12.8125rem;
+  left: -0.9375rem;
 
   &__card {
     z-index: 10;
@@ -25,7 +25,7 @@
   }
 
   &__title {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
     text-align: center;
     text-decoration: $pt-blue underline wavy;
