--- a/src/pages/EditExpensePage/EditExpensePage.scss
+++ b/src/pages/EditExpensePage/EditExpensePage.scss
@@ -9,7 +9,7 @@
 
   &__wrapper {
     border: 1px solid $border;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     background-color: white;
     margin-bottom: 5rem;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
@@ -24,7 +24,7 @@
   }
 
   &__back-link {
-    height: 24px;
+    height: 1.5rem;
     align-self: center;
   }
 
@@ -57,7 +57,7 @@
     border-radius: 1rem;
     border: 2px solid #d1d1d4;
     background: none;
-    padding: 8px;
+    padding: 0.5rem;
     transition: 0.2s;
     align-self: center;
     margin-bottom: 0.75rem;
@@ -98,7 +98,7 @@
 
   &__single {
     padding-left: 0.5rem;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   &__label {
@@ -108,7 +108,7 @@
   &__button {
     background: $pt-blue;
     color: white;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 0.5rem;
     border-radius: 1rem;
     border: 1px solid #d4d3e8;
@@ -122,7 +122,7 @@
   }
 
   &__button-text {
-    font-size: 13px;
+    font-size: 0.8125rem;
     color: white;
     font-weight: 500;
     letter-spacing: 1px;
