--- a/src/pages/ExpensesPage/ExpensesPage.scss
+++ b/src/pages/ExpensesPage/ExpensesPage.scss
@@ -9,7 +9,7 @@
 
   &__wrapper {
     border: 1px solid $border;
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     background-color: white;
     margin-bottom: 5rem;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
