--- a/src/pages/SignupPage/SignupPage.scss
+++ b/src/pages/SignupPage/SignupPage.scss
@@ -45,16 +45,16 @@
 
   &__icon {
     position: absolute;
-    left: 8px;
-    top: 2px;
+    left: 0.5rem;
+    top: 0.125rem;
   }
 
   &__input {
     border: none;
-    border-bottom: 2px solid #d1d1d4;
+    border-bottom: 0.125rem solid #d1d1d4;
     background: none;
-    padding: 8px;
-    padding-left: 30px;
+    padding: 0.5rem;
+    padding-left: 1.875rem;
     width: 95%;
     transition: 0.2s;
     align-self: center;
@@ -70,7 +70,7 @@
 
   &__button {
     background: #fff;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 0.3rem 0.75rem;
     border-radius: 1rem;
     border: 1px solid #d4d3e8;
@@ -91,7 +91,7 @@
   }
 
   &__text {
-    font-size: 13px;
+    font-size: 0.8125rem;
     color: #43628a;
     font-weight: 500;
     letter-spacing: 1px;
@@ -105,7 +105,7 @@
 
   &__login {
     margin-top: 1rem;
-    font-size: 12px;
+    font-size: 0.75rem;
     display: flex;
     align-self: center;
     font-family: "Chakra Petch";
@@ -119,7 +119,7 @@
   }
 
   &__error {
-    font-size: 12px;
+    font-size: 0.75rem;
     color: red;
     padding-left: 0.5rem;
     transform: translateY(-0.25rem);
@@ -127,7 +127,7 @@
     font-family: "Chakra Petch";
   }
   &__success {
-    font-size: 12px;
+    font-size: 0.75rem;
     color: forestgreen;
     padding-left: 0.5rem;
     transform: translateY(-0.25rem);
