feat:edit expense and expenseprofile

--- a/src/pages/ProfilesPage/ProfilesPage.scss
+++ b/src/pages/ProfilesPage/ProfilesPage.scss
@@ -71,7 +71,7 @@
   &__group {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     width: 100%;
   }
 
