--- a/src/pages/EditExpensePage/EditExpensePage.scss
+++ b/src/pages/EditExpensePage/EditExpensePage.scss
@@ -145,7 +145,9 @@
     font-family: "Chakra Petch";
   }
   &__success {
-    font-size: 1rem;
+    text-align: end;
+    padding-top: 0.5rem;
+    font-size: 0.75rem;
     font-weight: 500;
     color: forestgreen;
     padding-left: 0.5rem;
