--- a/src/components/ExpenseCard/ExpenseCard.scss
+++ b/src/components/ExpenseCard/ExpenseCard.scss
@@ -66,7 +66,7 @@
   &__actions {
     display: flex;
     gap: 0.5rem;
-    align-items: end;
+    align-items: flex-end;
   }
   &__icon {
     width: 1.25rem;
